# RaylibProjectTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
tests/: main_test.cpp
